# tiny-DINOv3-FT-PCam

./: .gitignore  LICENCE  README.md  makefile  pyproject.toml
scripts/: download_pcam.py  multi_jobs_launcher.sh  repro_finetuning.sh  repro_pruning.sh
src/data/: pcam_hf.py
src/models/: backbone_dinov3.py  classifier.py  lora.py
src/train/: data_utils.py  eval_checkpoint.py  finetune.py  pruning.py  train_linear.py
src/utils/: eval_utils.py  memory_utils.py  metrics.py  roc_plot.py  seed.py
